...

	return (
		<Card style={styles.container}>
			<Text style={styles.title}>Schedule a Viewing!</Text>
			<Text style={styles.infoText}>Your selected time:</Text>
			<Text style={styles.timeText}>{date.toISOString().split('T')[0] + ' ' + date.toLocaleTimeString([], { hour: '2-digit', minute:'2-digit', hour12: false })}</Text>
			<Button style={styles.button} onPress={() => setDatePickerVisibility(true)}><Text style={styles.buttonText}>Choose time for Viewing</Text></Button>
			<Button style={styles.button} onPress={handleSubmit}><Text style={styles.buttonText}>Schedule Viewing</Text></Button>
			<DateTimePickerModal
				mode="datetime"
				isVisible={isDatePickerVisible}
				date = {date}
				onConfirm={(date) => {
					setDate(date);
...
