...
			date={todayString}
			showTodayButton
			style={styles.wrapper}
			theme={{ todayButtonTextColor: theme.colors.primary }}
		>
			<HeaderText size={40} style={styles.header}>
				Viewings
			</HeaderText>
			{weekView ? (
				<WeekCalendar
					firstDay={1}
					markedDates={marked}
					style={styles.calendar}
...
