enum RentalAmenitiesEnum {
	WiFi = 'Wi-Fi/High-Speed Internet',
	AirConditioning = 'Air Conditioning/Heating',
	WashingMachine = 'Washing Machine',
	Dryer = 'Dryer',
	Dishwasher = 'Dishwasher',
	Refrigerator = 'Refrigerator',
	StoveOven = 'Stove/Oven',
	Microwave = 'Microwave',
	Parking = 'Parking',
	PetFriendly = 'Pet-Friendly Policies',
	FitnessCenter = 'Fitness Center/Gym',
	Pool = 'Pool',
	SecuritySystem = 'Security System / Gated Access',
	Garden = 'Garden / Outdoor Space',
	Balcony = 'Balcony/Patio',
	StorageSpace = 'Storage Space',
	Furnished = 'Furnished',
	CableTV = 'Cable TV',
	Elevator = 'Elevator Access',
	PublicTransportAccess = 'Public Transport Accessibility',
}

export default RentalAmenitiesEnum;
