import React from 'react';
import { ScrollView, StyleSheet, Text, View } from 'react-native';
import { useUser } from '@clerk/clerk-expo';
import { useUserDetails } from '../contexts/UserDetailsContext';
import { ProfilePicture } from '../components/base/ProfilePicture';
import { Background, HeaderText } from '../components';
import { EditableField } from '../components/base/EditableField';
import { Divider } from 'react-native-paper';
import { theme } from '../theme';

export const ProfileScreen: React.FC = () => {
	const { user } = useUser();
	const { profilePictureUrl, role } = useUserDetails();

	if (!user) return null;

	return (
		<Background>
			<ScrollView
				showsVerticalScrollIndicator={false}
				contentContainerStyle={styles.scrollView}
			>
				<View style={{ marginBottom: 7, alignItems: 'center' }}>
					<ProfilePicture
						canEdit={true}
						source={{ uri: profilePictureUrl }}
					/>
				</View>
				<HeaderText size={19}>
					Role:{' '}
					<Text style={{ color: theme.colors.primary }}>{role}</Text>
				</HeaderText>
				<EditableField
					isEditable={true}
					label="First Name"
					value={user.firstName || ''}
					onSave={(newValue) => user.update({ firstName: newValue })}
				/>
				<Divider />
				<EditableField
					isEditable={true}
					label="Last Name"
					value={user.lastName || ''}
					onSave={(newValue) => user.update({ lastName: newValue })}
				/>
				<Divider />
				<EditableField
					isEditable={true}
					label="Username"
					value={user.username || ''}
					onSave={(newValue) => user.update({ username: newValue })}
				/>
				<Divider />
				<EditableField
					isEditable={false}
					label="Email"
					value={user.primaryEmailAddress?.emailAddress || ''}
					onSave={(newValue) => console.log(newValue)}
				/>
			</ScrollView>
		</Background>
	);
};

const styles = StyleSheet.create({
	container: {
		flex: 1,
	},
	scrollView: {
		backgroundColor: theme.colors.background,
		elevation: 20,
		flexGrow: 1,
		justifyContent: 'center',
		padding: 20,
		paddingHorizontal: 15,
	},
	card: {
		margin: 20,
		backgroundColor: 'white',
		height: '100%',
	},
});
